Fixed Z-Index issue for the not found placeholder in series detail page

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -34,6 +34,7 @@
     clear: right;
     transition: width var(--transition-duration) ease, background var(--transition-duration) ease;
     overflow-y: auto;
+    position: relative;
 
     &::-webkit-scrollbar{width: 0;}
 
