--- a/src/app/pages/series-detail/series-detail.component.less
+++ b/src/app/pages/series-detail/series-detail.component.less
@@ -3,11 +3,8 @@
 :host{
     display:block;
     position: relative;
-    z-index: 0;
 
     .not-found{
-        position: absolute;
-        top: 345px; left: 0; right: 0;
         margin: auto;
         min-height: 200px;
         display:flex;
